--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Play the best online web games. Browse our collection of free browser games including action, puzzle, racing and more." />
-    <meta name="keywords" content="online games, web games, browser games, free games, casual games" />
+    <meta name="description" content="In Astro Prospector, explore the universe, gather resources, upgrade your ship, and become the ultimate space explorer." />
+    <meta name="keywords" content="online games, web games, browser games, free games, casual games, Space mining game, Resource management game, Space exploration, Online strategy game, Sci-fi adventure." />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
